force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/FSM_SendServiceAppointmentUpdates__e.object-meta.xml
<CustomObject>
    <description>SFI-25</description>
    <label>Send Service Appointment Updates</label>
    <pluralLabel>Send Service Appointment Updates</pluralLabel>
</CustomObject>