force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_ActionCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_ActionCode__c</fullName>
    <description>Created as a pert of sfi-696</description>
    <label>Action Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>