force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_Actual_End__c.field-meta.xml
<CustomField>
    <fullName>FSM_Actual_End__c</fullName>
    <description>SFI-25</description>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>