force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_Appointment_Number__c.field-meta.xml
<CustomField>
    <fullName>FSM_Appointment_Number__c</fullName>
    <label>Appointment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>