force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_Arrival_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>FSM_Arrival_Window_Start__c</fullName>
    <description>SFI-25</description>
    <label>Arrival Window Start</label>
    <type>DateTime</type>
</CustomField>