force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_CaseNeedsServiceRecovery__c.field-meta.xml
<CustomField>
    <fullName>FSM_CaseNeedsServiceRecovery__c</fullName>
    <description>SFI-1279..</description>
    <label>Case Needs Service Recovery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>