force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_CaseNumber__c</fullName>
    <description>SFI-2273</description>
    <label>Case Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>