force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_CustApptAdditionalDetails__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustApptAdditionalDetails__c</fullName>
    <description>SFI-1280
Data Type Updated as part of SFS-5433</description>
    <label>Additional Details Customer Appointment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>