force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_CustomerEmailComms__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerEmailComms__c</fullName>
    <description>SFI-1793
sfi-2738</description>
    <label>Customer Email Comms</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>