force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_CustomerFeedback__c.field-meta.xml
<CustomField>
    <fullName>FSM_CustomerFeedback__c</fullName>
    <description>SFI-1279..
sfi-2273
sfi-2738</description>
    <label>Customer Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>