force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_Debriefcomments__c.field-meta.xml
<CustomField>
    <fullName>FSM_Debriefcomments__c</fullName>
    <description>Created as a part of sfi-696</description>
    <label>Debrief Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>