force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_Duration__c.field-meta.xml
<CustomField>
    <fullName>FSM_Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>