force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_FieldworkerComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_FieldworkerComments__c</fullName>
    <description>SFI-1793
SFI-2663</description>
    <label>Fieldworker Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>