force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_FieldworkerVynUrl__c.field-meta.xml
<CustomField>
    <fullName>FSM_FieldworkerVynUrl__c</fullName>
    <description>Created as a part of SFI-1794..</description>
    <label>Fieldworker Vyn URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>