force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_ImpactCode__c.field-meta.xml
<CustomField>
    <fullName>FSM_ImpactCode__c</fullName>
    <description>Created as a part of sfi-696</description>
    <label>Impact Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>