force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OrderNumber__c</fullName>
    <description>Created as part of SFI-2350</description>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>