force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_ReasonForAttendingOutsideApptWindow__c.field-meta.xml
<CustomField>
    <fullName>FSM_ReasonForAttendingOutsideApptWindow__c</fullName>
    <description>SFI-1280</description>
    <label>Attending job outside Apt Window Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>