force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_RejectReasonComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_RejectReasonComments__c</fullName>
    <description>Created as part of SFI-1793
SFI-2738</description>
    <label>Reject Reason Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>