force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_SAP_External_Id__c.field-meta.xml
<CustomField>
    <fullName>FSM_SAP_External_Id__c</fullName>
    <description>SFI-25</description>
    <label>SAP External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>