force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceResource__c</fullName>
    <label>Service Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>