force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_SuspendReasonComments__c.field-meta.xml
<CustomField>
    <fullName>FSM_SuspendReasonComments__c</fullName>
    <description>SFI-1793
sfi-2738</description>
    <label>Suspend Reason Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>