force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_TimeEventType__c.field-meta.xml
<CustomField>
    <fullName>FSM_TimeEventType__c</fullName>
    <description>SFI-461</description>
    <label>Time Event Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>