force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_TimeSheetEntries__c.field-meta.xml
<CustomField>
    <fullName>FSM_TimeSheetEntries__c</fullName>
    <description>Created as a part of SFI-1557</description>
    <label>TimeSheetEntries</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>