force-app/main/default/objects/FSM_SendServiceAppointmentUpdates__e/fields/FSM_Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>FSM_Work_Order_Number__c</fullName>
    <label>Work Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>